--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.4.0",
 		"@eslint/js": "^9.39.1",
+		"@iconify/svelte": "^5.2.1",
 		"@sveltejs/adapter-auto": "^7.0.0",
 		"@sveltejs/enhanced-img": "^0.9.2",
 		"@sveltejs/kit": "^2.49.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
+		"@types/glidejs__glide": "^3.6.6",
 		"@types/node": "^24",
 		"eslint": "^9.39.1",
 		"eslint-config-prettier": "^10.1.8",
@@ -33,5 +35,10 @@
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.48.1",
 		"vite": "^7.2.6"
+	},
+	"dependencies": {
+		"@glidejs/glide": "^3.7.1",
+		"@humanspeak/svelte-markdown": "^0.8.14",
+		"viewerjs": "^1.11.7"
 	}
 }
