--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/lib/content"]
 	path = src/lib/content
-	url = git@github.com:fofajardo/fofajardo-portfolio-content.git
+	url = https://github.com/fofajardo/fofajardo-portfolio-content.git
