--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@eslint/compat": "^1.4.0",
     "@eslint/js": "^9.39.1",
     "@iconify/svelte": "^5.2.1",
-    "@sveltejs/adapter-auto": "^7.0.0",
+    "@sveltejs/adapter-vercel": "^6.3.0",
     "@sveltejs/enhanced-img": "^0.9.2",
     "@sveltejs/kit": "^2.49.1",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
