--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "format": "prettier --write .",
-    "lint": "prettier --check . && eslint ."
+    "lint": "prettier --check . && eslint .",
+    "postbuild": "pnpm dlx svelte-sitemap --out-dir .vercel/output/static --domain https://fofajardo.is-a.dev"
   },
   "devDependencies": {
     "@eslint/compat": "^1.4.0",
@@ -32,6 +33,7 @@
     "prettier-plugin-svelte": "^3.4.0",
     "svelte": "^5.45.6",
     "svelte-check": "^4.3.4",
+    "svelte-sitemap": "^2.7.1",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.48.1",
     "vite": "^7.2.6"
